@@ -1,3 +1,8 @@
+Wed Mar  6 12:27:10 2002  Jeffrey A Law  (law@redhat.com)
+
+	* m68k.h (CONST_COSTS): Lower cost of 0.0 when used inside a
+	COMPARE operator.
+	
 2002-03-06  Phil Edwards  <pme@gcc.gnu.org>
 
 	* version.c:  Fix misplaced leading blanks on first line.
